--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </div>
                 <div class="nav-buttons">
                     <a href="academixlogin.html" class="btn btn-secondary">Iniciar Sesión</a>
-                    <a href="registro.html" class="btn btn-secondary">Regístrate</a>
+                    <a href="Registro.html" class="btn btn-secondary">Regístrate</a>
                     <a href="#" class="btn btn-primary">Solicitar Demo</a>
 
                     <!-- Botón cambio de fondo -->
